Update shop by room or device h2 to have a fixed width on mobile layouts for better aesthetic

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -430,12 +430,19 @@ header {
 }
 
 .shop-by-room-or-device h2 {
-    padding: 70px 0 56px;
+    padding: 70px 0 36px;
+}
+
+@media screen and (max-width: 48em) {
+    .shop-by-room-or-device h2 {
+        width: 16rem;
+        margin: auto;
+    }
 }
 
 @media screen and (min-width: 48em) {
     .shop-by-room-or-device h2 {
-        padding-top: 100px;
+        padding: 100px 0 56px;
     }
 }
 
@@ -443,7 +450,6 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    /* gap: clamp(1rem, 4vw, 2.5rem); */
     gap: 2.5rem;
     list-style-type: none;
 
